--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -9,10 +9,10 @@
     </div>
   <% end %>
   
-  <%= f.label :status, 'タスク' %>
+  <%= f.label :status, 'ステータス' %>
   <%= f.text_field :status %>
   
-  <%= f.label :content, 'ステータス' %>
+  <%= f.label :content, 'タスク' %>
   <%= f.text_field :content %>
   
   <%= f.submit '登録' %>
