--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -20,8 +20,8 @@
         <%= f.label :content, 'タスク' %>
         <%= f.text_field :content, class: 'form-control' %>
       </div>
-
-      <%= f.submit '登録', class: 'btn btn-primary' %>
+      <span class="glyphicon glyphicon-download-alt">
+      <%= f.submit '登録', class: 'btn btn-primary' %></span>
    <% end %>
   </div>
 </div>
