--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -22,5 +22,6 @@
   
 <% end %>
 
+<span class="glyphicon glyphicon-download-alt">
 <%= link_to '新規タスクの登録', new_task_path, class: "btn btn-primary" %>
-
+</span>
