--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,20 +1,21 @@
 <h1 style="color: blue;">id = <%= @task.id %>のタスク詳細ページ</h1>
-
-<table class="table table-bordered">
-  <tr>
-    <th>id</th>
-    <td><%= @task.id %></td>
-  </tr>
-  <tr>
-    <th>ステータス</th>
-    <td><%= @task.status %></td>
-  </tr>
-  <tr>
-    <th>タスク</th>
-    <td><%= @task.content %></td>
-  </tr>
-</table>
-
-
-<%= link_to 'このタスクを編集する', edit_task_path(@task), class: 'btn btn-default' %>
+　<table class="table table-bordered">
+    <tr>
+      <th>id</th>
+      <td><%= @task.id %></td>
+    </tr>
+    <tr>
+      <th>ステータス</th>
+      <td><%= @task.status %></td>
+    </tr>
+    <tr>
+      <th>タスク</th>
+      <td><%= @task.content %></td>
+    </tr>
+  </table>
+<span class="glyphicon glyphicon-edit">
+<%= link_to 'このタスクを編集する', edit_task_path(@task), class: 'btn btn-info' %>
+</span>
+<span class="glyphicon glyphicon-trash">
 <%= link_to 'このタスクを削除する', @task, method: :delete, data:{ confirm:'本当に削除してよろしいですか？' }, class: 'btn btn-danger' %>
+</span>    
