--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,9 +21,9 @@
       <div class="row">
         <div class="col-xs-12 col-sm-offset-2 col-sm-8 col-md-offset-2 col-md-8 col-lg-offset-3 col-lg-6">
   　　　</div>
+  　　<%= render 'layouts/flash_messages' %>
   　　
-    　<%= render 'layouts/flash_tasks' %>
-    
+  　　
     　<%= yield %>
     </div>　　
   </body>
