--- a/app/views/toppages/index.html.erb
+++ b/app/views/toppages/index.html.erb
@@ -1,5 +1,6 @@
-<h1 style="color: blue;">タスク一覧</h1>
-
+<% if logged_in? %>
+  <h1 style="color: blue;">タスク一覧</h1>
+  <% if @tasks.any? %>
   <table class="table table-striped">
     <thead>
       <tr>
@@ -11,17 +12,26 @@
     <tbody>
       <% @tasks.each do |task| %>
         <tr>
-          <td><%= link_to task.id, task %></td>
+          <td><%= link_to task.id, task_path(task) %></td>
           <td><%= task.status %></td>
           <td><%= task.content %></td>
         </tr>
       <% end %>
     </tbody>
   </table>
-  
 <% end %>
-
 <a class="btn btn-primary" href="/tasks/new">
   <span class="glyphicon glyphicon-download-alt">
   新規タスクの登録
 </a>
+
+<% else %> 
+  <div class="center jumbotron">
+    <div class="text-center">
+      <h1 style="color: green;">Let's make your Task!</h1>
+      <br>
+      <br>
+      <%= link_to 'Sign up now!', signup_path, class: 'btn btn-lg btn-primary' %>
+    </div>
+  </div>
+<% end %>
