--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,5 @@
-<h1 style="color: blue;">タスク一覧</h1>
-
+ <h1 style="color: blue;">タスク一覧</h1>
+  <% if @tasks.any? %>
   <table class="table table-striped">
     <thead>
       <tr>
@@ -11,16 +11,14 @@
     <tbody>
       <% @tasks.each do |task| %>
         <tr>
-          <td><%= link_to task.id, task %></td>
+          <td><%= link_to task.id, task_path(task) %></td>
           <td><%= task.status %></td>
           <td><%= task.content %></td>
         </tr>
       <% end %>
     </tbody>
   </table>
-  
 <% end %>
-
 <a class="btn btn-primary" href="/tasks/new">
   <span class="glyphicon glyphicon-download-alt">
   新規タスクの登録
